--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "csv-reader": "^1.0.7",
     "d3": "^6.7.0",
     "d3-selection": "^2.0.0",
     "d3-transition": "^2.0.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-styled-components": "^4.3.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-csv": "^3.3.0",
     "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
