integration with 26 entries

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "d3": "^6.7.0",
     "d3-selection": "^2.0.0",
     "d3-transition": "^2.0.0",
-    "gatsby": "^3.2.1",
+    "gatsby": "^3.5.1",
     "gatsby-plugin-styled-components": "^4.3.0",
     "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-source-notion-api": "^0.7.1",
     "gatsby-transformer-csv": "^3.3.0",
     "re-resizable": "^6.9.0",
     "react": "^17.0.1",
